--- a/index.html
+++ b/index.html
@@ -135,11 +135,12 @@
         <table id="activitiesTable" class="w-full text-xs border-collapse min-w-[1200px] print-table">
           <thead class="bg-gray-200">
             <tr>
-              <th class="border border-black p-1 min-w-[180px]">Actividad a Realizar</th>
+              <th class="border border-black p-1 min-w-[280px]">Actividad a Realizar</th>
               <th class="border border-black p-1 min-w-[140px]">Dirección Programación</th>
               <th class="border border-black p-1 min-w-[140px]">Proyecto / Barrio</th>
               <th class="border border-black p-1 w-12">Comuna</th>
               <th class="border border-black p-1 w-16">Municipio</th>
+              <th class="border border-black p-1 w-16">contrato</th>
               <th class="border border-black p-1 w-16">Tipo Proyecto</th>
               <th class="border border-black p-1 w-16">Hora Inicio</th>
               <th class="border border-black p-1 w-16">Hora Termina</th>
